--- a/cine.css
+++ b/cine.css
@@ -14,10 +14,9 @@
 } 
 body
 {
-    background-color: var(--fondo-color);
     display: grid;
-    grid-template-columns: 80% 20%;
-    grid-template-rows: 22% 65% auto 25%;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 19% 65% auto 25%;
     grid-template-areas: 'header header'
                           'main barra'
                           'section section'
@@ -34,7 +33,7 @@ header
     width: 184px;
     height: 69px;
     box-shadow: 10px 0px 50px var(--letras-color);
-    margin: 25px 0px 0px 468px;
+    margin: 23px 0px 0px 468px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 49px;
@@ -83,12 +82,12 @@ section
 .col
 {
     height: 295px;
-    margin: 20px;
+    margin: 25px;
     box-shadow: 10PX 10PX 15PX rgb(18, 18, 18);
 }
 .container
 {
-    margin-top: 80px;
+    margin-top: 60px;
 }
 footer
 {
@@ -96,3 +95,61 @@ footer
     grid-area: footer;
 }
 /* tengo que hacer posicionamientos para celulares*/ 
+@media ( max-width: 500px)
+{
+    footer
+    {
+        grid-area: footer;
+    }
+    body
+    {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px 260px auto auto 15%;
+        grid-template-areas: 'header'
+                              'main'
+                              'barra'
+                              'section'
+                              'footer';
+    }
+    header
+    {
+        grid-area: header;
+    }
+    main
+    {
+        grid-area: main;
+    }
+    .barra
+    {
+        grid-area: barra;
+    }
+    section
+    {
+        grid-area: section;
+    }
+    .logo
+    {
+        width: 124px;
+        height: 45px;
+        margin: 32px 0px 0px 30px;
+        font-size: 32px;
+        font-weight: 200;
+    }
+    .botoncito
+    {
+    margin: 40px;
+    width: 90px;
+    height: 30px;
+    padding: 3px;
+    }
+    .col
+    {
+    height: 200px;
+    margin: 5px;
+    }
+    .container
+    {
+        margin-bottom: 30px;
+    }
+}
