--- a/incsripcion.css
+++ b/incsripcion.css
@@ -1,51 +1,84 @@
 :root
 {
     --principal-color: rgb(218, 30, 218) ;
-    --detalles-color: rgb(96, 96, 96);
+    --detalles-color: rgb(103, 103, 103);
     --fondo-color: rgb(61, 61, 61);
     --lineas-color: rgb(28, 28, 28);
-    --letras-claras-color:rgb(191, 191, 191) ;
-    --letras-color: rgb(30, 79, 117) ;
+    --letras-claras-color:rgb(207, 207, 207) ;
+    --letras-color: rgb(34, 125, 125) ;
 } 
 header
 {
     width: 100%;
-    height: 30%;
+    height: 14%;
     background-color: var(--lineas-color);
-}
-/*todavia no se si va a ir el logo*/ 
-.logo
-{
-    width: 125px;
-    height: 54px;
-    box-shadow: 10px 0px 50px var(--letras-color);
-    text-shadow: 10px 10px 30px var(--principal-color);
-    margin: 25px 68px;
-    font-style: italic;
-    font-size: 36px;
-    font-weight: 600;
-    display: inline-flex;
-    color: var(--letras-claras-color);
 }
 .cuerpo
 {
+    background-image: url(fondo-astronauta.jpg);
+    background-position: 80px -110px;
     width: 100%;
-    height: 90%;
+    height: auto;
     background-color: var(--fondo-color);
 }
-.container
+p
 {
-    padding: 70px 40px;
+    background-color: var(--letras-color) ;
+    text-align: center;
+    font-size: 15px;
 }
+.container
+{ padding: 45px;}
 .col
 {
-    height: 400px;
-    box-shadow: 3px 8px 70px blanchedalmond;
-    margin: 30px;
+    background-color: rgba(0, 0, 0, 0.486);
+    height: 465px;
+    box-shadow: 5px 5px 20px var(--letras-color);
+    border-left: 4px double var(--letras-color);
+    border-right: 4px double var(--letras-color);
+    margin: 18px;
+    color: var(--letras-claras-color);
+}
+h3
+{
+    background-color: rgba(0, 0, 0, 0.532);
+    border-bottom:3px double var(--letras-color);
+    border-top: 3px double var(--letras-color);
+    height: 60px;
+    text-align: center;
+}
+label
+{
+    margin: 10px;
+    font-size: 20px;
+}
+.terminos
+{
+    font-size: 17px;
+    font-family: 'Times New Roman', Times, serif;
+}
+button
+{
+    background-color: var(--detalles-color);
 }
 .categorias
 {
     width: 100%;
-    height: 30%;
-    background-color: var(--lineas-color);
+    height: 25%;
+    background-color: var(--lineas-color) ;
+}
+
+/*brack points*/
+
+@media (max-width: 500px)
+{
+    .cuerpo
+    {
+        background-image: url(fondo-celu.jpg);
+        background-position: -118px -280px;
+    }
+    .col
+    {
+        height: 550px;
+    }
 }
