--- a/cine.css
+++ b/cine.css
@@ -3,153 +3,128 @@
     margin: 0px;
     padding: 0px;
 }
-:root
-{
-    --principal-color: rgb(218, 30, 218) ;
-    --detalles-color: rgb(96, 96, 96);
-    --fondo-color: rgb(61, 61, 61);
-    --lineas-color: rgb(28, 28, 28);
-    --letras-claras-color:rgb(203, 203, 203) ;
-    --letras-color: rgb(30, 79, 117) ;
-} 
 body
 {
     display: grid;
-    grid-template-columns: 75% 25%;
-    grid-template-rows: 19% 65% auto 25%;
-    grid-template-areas: 'header header'
-                          'main barra'
-                          'section section'
-                          'footer footer';
+    grid-template-columns: 1fr;
+    grid-template-rows: 140px 80% 310px 210px;
+    grid-template-areas: 'header'
+                          'main'
+                          'barra'
+                          'footer';
 }
 header
 {
     grid-area: header;
-    background-color: var(--lineas-color);
-
+    background-color: rgb(20, 20, 20);
 }
-.logo
+header .logo
 {
-    width: 184px;
-    height: 69px;
-    box-shadow: 10px 0px 50px var(--letras-color);
+    box-shadow: 10px 8px 80px rgb(9, 67, 153);
+    border-radius: 100%;
     margin: 23px 0px 0px 468px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    font-size: 49px;
-    font-weight: 500;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: inline-flex;
 }
-.botoncito
+header .logo h1
 {
-    float: right;
-    margin: 56px 48px;
-    width: 110px;
-    height: 40px;
-    padding: 5px;
-    color: var(--letras-claras-color);
-    border: 1px solid blanchedalmond;
-    background-color: var(--lineas-color);
-}
-span
-{
-    color: var(--letras-claras-color);
-    font-weight: 600;
-    text-shadow: 10px 10px 30px var(--principal-color);
-    
-
+    font-size: 63px;
+    font-weight:700;
+    color: rgb(188, 188, 177);
+    text-shadow: 10px 7px 40px rgb(246, 6, 246);
 }
 .barra
 {
-    background-color: var(--detalles-color);
+    background-color: rgb(74, 74, 74);
     grid-area: barra;
+    display: flex;
+    align-items: center;
+}
+.barra .caja
+{
+    width: 330px;
+    height: 120px;
+    margin: 0px 140px;
+    border-radius: 40px;
+    background-image: radial-gradient(circle, rgb(73, 73, 73), rgb(45, 43, 43)) ;
+    box-shadow: 12px 12px 80px rgba(38, 16, 82, 0.918);
+}
+.barra .caja h2 
+{
+    font-size: 25px;
+    color: rgb(186, 184, 170);
 }
 main
 {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(41, 41, 41);
     grid-area: main;
 }
-
-img{width: 100%; height:100%;}
-
-section
+main .carousel
 {
-    background-color: var(--fondo-color);
-    grid-area: section;
-    color: rgb(201, 201, 201);
-    font-style: italic;
+    width: 80%;
+    height: 90%;
+    margin: 2% 10%;
 }
-.col
+main .carousel img
 {
-    height: 295px;
-    margin: 25px;
-    box-shadow: 10PX 10PX 15PX rgb(18, 18, 18);
-}
-.container
-{
-    margin-top: 60px;
+    width: 100%;
+    height:100%;
 }
 footer
 {
-    background-color: var(--lineas-color);
+    background-color: rgb(20, 20, 20);
     grid-area: footer;
+    color: rgb(192, 185, 175);
+    display: flex;
+}
+footer .box
+{
+    margin: 30px 200px;
 }
 /* tengo que hacer posicionamientos para celulares*/ 
-@media ( max-width: 500px)
+@media  (max-width:550px)
 {
-    footer
-    {
-        grid-area: footer;
-    }
-    body
-    {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 100px 260px auto auto 15%;
-        grid-template-areas: 'header'
-                              'main'
-                              'barra'
-                              'section'
-                              'footer';
-    }
-    header
-    {
-        grid-area: header;
-    }
-    main
-    {
-        grid-area: main;
-    }
-    .barra
-    {
-        grid-area: barra;
-    }
-    section
-    {
-        grid-area: section;
-    }
-    .logo
-    {
-        width: 124px;
-        height: 45px;
-        margin: 32px 0px 0px 30px;
-        font-size: 32px;
-        font-weight: 200;
-    }
-    .botoncito
-    {
-    margin: 40px;
-    width: 90px;
-    height: 30px;
-    padding: 3px;
-    }
-    .col
-    {
-    height: 200px;
-    margin: 5px;
-    }
-    .container
-    {
-        margin-bottom: 30px;
-    }
+body
+{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 120px 320px auto 190px;
+    grid-template-areas: 'header'
+                          'main'
+                          'barra'
+                          'footer';
+}
+header .logo
+{
+    box-shadow: 10px 8px 80px rgb(9, 67, 153);
+    margin: 23px 160px;
+}
+header .logo h1
+{
+    font-size: 48px;
+}
+.barra
+{
+    padding: 30px;
+    display: block;
+}
+.barra .caja
+{
+    width: 100%;
+    height: 100px;
+    border-radius: 0px;
+    margin: 10px;
+    border: none;
+}
+main .carousel
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+footer .box
+{
+    margin: 30px 20px;
+    font-size: 12px;
+}
 }
