--- a/incsripcion.css
+++ b/incsripcion.css
@@ -12,34 +12,50 @@ header
     width: 100%;
     height: 14%;
     background-color: var(--lineas-color);
+    padding: 20px;
+    display: flex;
 }
-.cuerpo
+header .inicio
 {
-    background-image: url(fondo-astronauta.jpg);
-    background-position: 80px -110px;
+    margin: 15px 350px 0px 60px;
+    color: rgb(169, 169, 169);
+    border: none;
+}
+header h1
+{
+    font-size: 39px;
+    color: rgb(169, 169, 169);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight:800;
+    text-align: center;
+}
+main
+{
+    background-image: url(img/fondo-astronauta.jpg);
+    background-size: cover;
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: var(--fondo-color);
 }
-p
+main p
 {
     background-color: var(--letras-color) ;
     text-align: center;
     font-size: 15px;
 }
-.container
-{ padding: 45px;}
-.col
+main .completar
 {
-    background-color: rgba(0, 0, 0, 0.486);
-    height: 465px;
-    box-shadow: 5px 5px 20px var(--letras-color);
+    background-color: rgba(0, 0, 0, 0.566);
+    height: 495px;
+    width: 63%;
+    box-shadow: 5px 5px 50px var(--letras-color);
     border-left: 4px double var(--letras-color);
     border-right: 4px double var(--letras-color);
-    margin: 18px;
+    margin: 15px;
     color: var(--letras-claras-color);
+    padding: 30px;
 }
-h3
+main .completar h2
 {
     background-color: rgba(0, 0, 0, 0.532);
     border-bottom:3px double var(--letras-color);
@@ -47,38 +63,74 @@ h3
     height: 60px;
     text-align: center;
 }
-label
+main .completar label
 {
     margin: 10px;
     font-size: 20px;
 }
-.terminos
+main .completar button
 {
-    font-size: 17px;
-    font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(9, 82, 99);
+    padding: 5px 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: none;
+    margin-left: 210px;
 }
-button
+main .completar .terminos
 {
-    background-color: var(--detalles-color);
+    font-size: 14px;
 }
-.categorias
+footer
 {
     width: 100%;
-    height: 25%;
-    background-color: var(--lineas-color) ;
+    height: 30%;
+    background-color: rgb(20, 20, 20) ;
+    display: flex;
+    color: rgb(160, 160, 160);
+    padding: 10px;
+}
+footer .box 
+{
+    font-size: 15px;
+    margin: 20px 120px;
 }
 
 /*brack points*/
-
-@media (max-width: 500px)
+@media  (max-width:550px)
 {
-    .cuerpo
-    {
-        background-image: url(fondo-celu.jpg);
-        background-position: -118px -280px;
-    }
-    .col
-    {
-        height: 550px;
-    }
+    main
+{
+    background-image: url(img/spider-man.jpg);
+    height: 650px;
+}
+main .completar
+{
+    height: 555px;
+    width: 98%;
+    margin: 7px;
+}
+header
+{
+    display: inline-block;
+    padding: 10px;
+}
+header .inicio
+{
+    margin: 5px 10px;
+    font-size: 15px;
+}
+header h1
+{
+    font-size: 30px;
+    margin-left: 18px;
+}
+footer
+{
+    height: 220px;
+}
+footer .box 
+{
+    font-size: 15px;
+    margin: 15px 50px;
+}
 }
